--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
 
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="sakshi_chavan_resume .pdf" class="btn btn-primary py-4 px-5">Download CV</a></p>
+    				<p><a href="sakshiportfolio.github.io/sakshi_chavan_resume .pdf" class="btn btn-primary py-4 px-5">Download CV</a></p>
     			</div>
     		</div>
     	</div>
