--- a/index.html
+++ b/index.html
@@ -551,7 +551,8 @@ Heart Health Predictor </a></h3>
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Download Resume</h3>
-	            <p><a href="https://sakshiportfolio.github.io/sakshi_chavan_resume .pdf">resumelink</a></p>
+			href="sakshiportfolio.github.io/sakshi_chavan_resume .pdf"
+	            <p><a href="sakshiportfolio.github.io/sakshi_chavan_resume .pdf">resumelink</a></p>
 	          </div>
           </div>
 <!--
