--- a/index.html
+++ b/index.html
@@ -537,6 +537,15 @@ Heart Health Predictor </a></h3>
 	            <p><a href="mailto:info@yoursite.com">schavan4@binghamton.edu</a></p>
 	          </div>
           </div>
+		<div class="col-md-6 col-lg-3 d-flex ftco-animate">
+          	<div class="align-self-stretch box p-4 text-center">
+          		<div class="icon d-flex align-items-center justify-content-center">
+          			<span class="icon-globe"></span>
+          		</div>
+          		<h3 class="mb-4">Download Resume</h3>
+	            <p><a href="/Users/sakshichavan/Desktop/Portfolio-Website-Template-main/sakshi_chavan_resume .pdf">resumelink</a></p>
+	          </div>
+          </div>
 		
           </div>
 <!--
