--- a/index.html
+++ b/index.html
@@ -542,8 +542,19 @@ Heart Health Predictor </a></h3>
           		<div class="icon d-flex align-items-center justify-content-center">
           			<span class="icon-globe"></span>
           		</div>
-          		<h3 class="mb-4">Download Resume</h3>
-	            <p><a href="/Users/sakshichavan/Desktop/Portfolio-Website-Template-main/sakshi_chavan_resume .pdf">resumelink</a></p>
+          		<h3 class="mb-4">Linkedin</h3>
+	            <p><a href="www.linkedin.com/in/sakshichavan27">Sakshi linkedIn/a></p>
+	          </div>
+          </div>
+		 <div class="col-md-6 col-lg-3 d-flex ftco-animate">
+          	<div class="align-self-stretch box p-4 text-center">
+          		<div class="icon d-flex align-items-center justify-content-center">
+          			<span class="icon-map-signs"></span>
+          		</div>
+			<h3 class="mb-4">github</h3>
+	            <p><a href="https://github.com/sakshichavan4">Sakshi github</a></p>
+          		
+	        
 	          </div>
           </div>
 		
