--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@ Heart Health Predictor </a></h3>
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Linkedin</h3>
-	            <p><a href="www.linkedin.com/in/sakshichavan27">Sakshi linkedIn</a></p>
+	            <p><a href="https://www.linkedin.com/in/sakshichavan27">Sakshi linkedIn</a></p>
 	          </div>
           </div>
 		 <div class="col-md-6 col-lg-3 d-flex ftco-animate">
