--- a/index.html
+++ b/index.html
@@ -192,8 +192,9 @@
 						<!-- <h2 class="d-flex" style="margin-bottom: 0">With over 5 years of experience</h2> -->
 						<!-- <br> -->
 			            <p><a href="https://www.linkedin.com/in/sakshichavan27  " class="btn btn-primary py-3 px-4">LinkedIn</a> 
-							<a href="https://github.com/sakshichavan4" class="btn btn-white btn-outline-white py-3 px-4">github</a>-->
+							<a href="sakshi_chavan_resume .pdf"  class="btn btn-white btn-outline-white py-3 px-4">Download CV</a>-->
 					    </p>
+					
 		            </div>
 		          </div>
 	        	</div>
