--- a/index.html
+++ b/index.html
@@ -337,14 +337,14 @@
 		<div class="row">
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate" style="width: 500px; height: 700px;">
-						<span class="date">January 2022 - June 2022 </span>
-						<h2>Data Analyst  </h2>
-						<span class="position">Techbee Consulting</span>
+						<span class="date">January 2023 - May 2024 </span>
+						<h2>Data Associate</h2>
+						<span class="position">Binghamton University</span>
 						<p class="mt-4"> 
 							<ul>
-								<li>Conducted EDA on e-commerce sales, customer behavior, and website traffic data using Python, Matplotlib, and Seaborn, identifying trends that boosted sales conversion rates by 15%</li>
-								<li>Crafted and maintained Tableau dashboards to visualize key metrics enabling stakeholders to gain insights into the data</li>
-								<li>Co-ordinated in data preprocessing, feature engineering, and implementing sentiment analysis on customer reviews using natural language processing (NLP) techniques in Python to enhance data quality, model performance, and derive insights</li>
+								<li>Conducted Exploratory Data analysis on 50,000+ customer records using SQL and Python libraries (Pandas, NumPy, Seaborn, Matplotlib) to analyze and identify key trends and anomalies in the database structure</li>
+								<li>Automated reports and improved test efficiency by 30% using Python, SQL, and MySQL, reducing manual effort by 50%</li>
+								<li> Developed Tableau dashboards to visualize customer trends and preferences, resulting in a 25% increase in retention and a 70% boost in repeat purchases through targeted SEO data insights</li>
 							</ul>
 						</p>
 					</div>
@@ -353,15 +353,15 @@
 
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate" style="width: 500px; height: 700px;">
-						<span class="date">May 2021 - September 2021</span>
-						<h2>Data Analyst </h2>
-						<span class="position"> ITFMS Infotech Pvt. Ltd</span>
+						<span class="date">May 2021 - June 2022</span>
+						<h2>Junior Data Scientist </h2>
+						<span class="position">Techbee Consulting</span>
 						<p class="mt-4">
 							<ul>
-								<li>Conducted EDA on customer churn datasets for a gas and electricity utility with 15,000+ customers, using Python for data type analysis, descriptive statistics, and feature engineering</li>
-								<li>Developed and evaluated a Random Forest classifier model achieving 80% accuracy in predicting churn, identifying primary drivers like yearly consumption, forecasted consumption, and net margin</li>
-								<li>Analyzed customer churn, identifying a 9.7% rate, and collaborated with stakeholders to refine data collection methods</li>
-								<li>Recommended and validated a targeted 20% discount strategy based on customer segmentation and churn probability</li>
+								<li>Built a robust ETL pipeline in Talend to extract and load data from REST APIs, coordinated with cross-functional teams to develop automation of data flow, reducing manual intervention by 75% </li>
+								<li>Modified SQL queries, boosting execution speed by 40% and reducing response times, facilitating faster, data-driven insights</li>
+								<li>Enhanced ML models in Python, increasing accuracy by 15% & providing predictive insights for strategic decision-making</li>
+								<li>Created dashboards and designed reports using SaaS tools (Tableau, Power BI), providing data-driven insights that boosted stakeholder engagement by 35% and accelerated decision-making</li>
 
 								
 								
@@ -375,13 +375,13 @@
     <div class="resume-wrap ftco-animate mx-auto" style="width: 515px; height: 800px;">
         <span class="date">May 2020 - April 2021 </span>
         <h2>Data Analyst </h2>
-        <span class="position">Cal-Tech IT Solution</span>
+        <span class="position">CalTech IT Solution</span>
         <p class="mt-4">
             <ul>
-                <li>Led a project analyzing content categories for a social media analytics company, identifying top categories by aggregate popularity and aligning with business objectives through data understanding of over 100,000 posts annually</li>
-                <li>Cleaned and preprocessed data in Excel, removing 15% of rows with missing values, adjusting data types, and eliminating irrelevant columns</li>
-                <li>Merged datasets using VLOOKUP, performed analysis with SUMIF to identify top-performing categories, and improved data quality with techniques that reduced errors by 20%</li>
-		<li>Leveraged Tableau for data visualization, supporting business decisions, and applied advanced data modeling to integrate multiple sources, extracting key trends and top content categories, resulting in a 25% improvement in content strategy efficiency</li>
+                <li>Built an SSIS ETL pipeline with SSRS integration, reducing data processing time by 50% and enhancing efficiency by 20%</li>
+                <li>Analyzed data in Power BI, creating data visualizations and reports that highlighted KPIs and trends for improved business strategy</li>
+                <li>Engineered automated web scraping scripts using Python libraries (BeautifulSoup, Scrapy) to collect data from websites,reducing manual data entry by 90% and improving data accuracy</li>
+		<li> Amplified marketing efficiency by 25% for an E-commerce social media client by analyzing 100,000+ posts using SQL and Excel; delivered KPIs and ad-hoc reports for strategic decisions</li>
             </ul>
         </p>
     </div>
