--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 						<!-- <h2 class="d-flex" style="margin-bottom: 0">With over 5 years of experience</h2> -->
 						<!-- <br> -->
 			            <p><a href="https://www.linkedin.com/in/sakshichavan27  " class="btn btn-primary py-3 px-4">LinkedIn</a> 
-							<a href="sakshi_chavan_resume .pdf"  class="btn btn-white btn-outline-white py-3 px-4">Download CV</a>-->
+							<a href="Sakshi_chavan_resume.pdf"  class="btn btn-white btn-outline-white py-3 px-4">Download CV</a>-->
 					    </p>
 					
 		            </div>
