--- a/index.html
+++ b/index.html
@@ -373,16 +373,17 @@ manual data entry by 90% and improving data accuracy</li>
         </p>
     </div>
 </div>
- <div class="col-md-6">
+                                       <div class="col-md-6">
 					<div class="resume-wrap ftco-animate" style="width: 500px; height: 700px;">
-						<span class="date">Dec 2024 - Feb 2024</span>
-						<h2>Data Science Intern </h2>
-						<span class="position">Bunchful Enterprise</span>
+						<span class="date">May 2021 - Jul 2022</span>
+						<h2>Junior Data scientist</h2>
+						<span class="position">Techbee Consulting</span>
 						<p class="mt-4">
 							<ul>
-								<li>Devised 15+ AI Agents using LangChain, LlamaIndex, LLMs, and RAG to optimize Workflows and ensure scalability </li>
-								<li>Tracked agent behaviours in Excel using VLOOKUP, PivotTables etc to streamline analysis and improve workflow transparency</li>
-								<li>Outlined AI workflows, integrating APIs for real-time processing to enhance system efficiency and agent interaction</li>
+								<li>Amplified marketing efficiency by 15% for an e-commerce social media client by analyzing 100,000+ social media posts using
+SQL, SAP HANA, and Excel; delivered actionable KPIs and ad-hoc reports that influenced strategic decisions</li>
+								<li>Optimized SQL queries and resolved performance bottlenecks, reducing execution time by 40% and enhancing report refresh rates</li>
+								<li>Created dashboards and Crafted reports using SaaS tool Power BI, delivering insights to identify top content and marketing trends</li>
 								
 
 								
