--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@ SQL, SAP HANA, and Excel; delivered actionable KPIs and ad-hoc reports that infl
 
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="Sakshi_chavan_resume.pdf" class="btn btn-primary py-4 px-5">Download CV</a></p>
+    				<p><a href="Sakshi_Chavan_Resume.pdf" class="btn btn-primary py-4 px-5">Download CV</a></p>
     			</div>
     		</div>
     	</div>
