--- a/index.html
+++ b/index.html
@@ -325,13 +325,13 @@
 						<span class="position">Apex Systems- (Client-Mckesson)</span>
 						<p class="mt-4"> 
 							<ul>
-								<li>Improved data accuracy and efficiency of pharmaceutical Drug transactions under the 340B Program for McKesson by
-optimizing large datasets with SQL for compliant tracking and crediting of eligible medications</li>
-								<li>Collaborated cross-functionally with 7+ teams across Macro Helix and McKesson to translate business requirements into
-data-driven solutions, supporting informed decision-making across pharmacy and compliance teams</li>
-								<li> Designed and maintained 10+ interactive Power BI dashboards by integrating data from SQL Server, Excel, and Databricks,
-delivering real-time insights into VRR transactions and improving operational visibility</li>
-								<li>Developed monthly scheduled Power BI reports to track key metrics such as accumulation trends and reconciliation discrepancies</li>
+								<li>Engineered SQL scripts to reconcile 5M+ healthcare records, improving data accuracy and operational efficiency of 340B pharmaceutical transactions through compliant tracking and crediting of eligible medications</li>
+								<li>Collaborated with 10+ cross-functional teams to deliver data-driven enhancements for pharmacy operations and credit workflows</li>
+								<li> Constructed and orchestrated modular ETL pipelines in Azure Data Factory to migrate datasets from SQL Server to Databricks,
+enabling reusable, scalable workflows across multiple source systems</li>
+								<li>Integrated SQL Server and Databricks data into Power BI to automate VRR reporting, reducing manual effort by 30% and improving
+visibility into KPIs like accumulation trends and reconciliation discrepancies
+</li>
 							</ul>
 						</p>
 					</div>
@@ -346,9 +346,10 @@ delivering real-time insights into VRR transactions and improving operational vi
 						<span class="position">Bunchful Enterprise</span>
 						<p class="mt-4">
 							<ul>
-								<li>Devised 15+ AI Agents using LangChain, LlamaIndex, LLMs, and RAG to optimize Workflows and ensure scalability </li>
-								<li>Tracked agent behaviours in Excel using VLOOKUP, PivotTables etc to streamline analysis and improve workflow transparency</li>
-								<li>Outlined AI workflows, integrating APIs for real-time processing to enhance system efficiency and agent interaction</li		
+								<li>Designed and developed a multi-AI agent system using LangChain, LlamaIndex, LLMs, and RAG, implementing retrieval techniques and workflow orchestration to enhance accuracy, collaboration, and decision-making
+ </li>
+								<li>Built 15+ domain-specific AI agents for marketing, philanthropy, and social media using prompt engineering and task-specific logic to generate content, analyze campaigns, and support stakeholder workflows</li>
+								<li>Fine-tuned prompts and parameters, improving agent performance through evaluation and contextual optimization</li		
 							</ul>
 						</p>
 					</div>
@@ -363,11 +364,11 @@ delivering real-time insights into VRR transactions and improving operational vi
         <span class="position">Binghamton University </span>
         <p class="mt-4">
             <ul>
-                <li>Analyzed 10k+ customer records using SQL and Python to identify key trends and anomalies in the database structure</li>
-                <li>Built Tableau dashboards to visualize trends and preferences, resulting in a 25% increase in retention and a 70% boost in repeat
-purchases through targeted data insights</li>
-                <li>Engineered automated web scraping scripts using Python libraries (BeautifulSoup, Scrapy) to collect data from websites, reducing
-manual data entry by 90% and improving data accuracy</li>
+                <li>Analyzed 10K+ POS transaction records using Python to uncover trends in customer behavior and product-level sales performance</li>
+                <li>Automated the cleaning, transformation, and validation of weekly CSV files using Python scripts, streamlining the data preparation
+workflow and improving processing efficiency and consistency by 90%</li>
+                <li>Implemented Tableau dashboards to track revenue trends and key operational metrics, supporting inventory and staffing decisions
+</li>
 		
             </ul>
         </p>
@@ -376,14 +377,15 @@ manual data entry by 90% and improving data accuracy</li>
                                        <div class="col-md-6">
 					<div class="resume-wrap ftco-animate" style="width: 500px; height: 700px;">
 						<span class="date">May 2021 - Jul 2022</span>
-						<h2>Junior Data scientist</h2>
+						<h2>Data Analyst</h2>
 						<span class="position">Techbee Consulting</span>
 						<p class="mt-4">
 							<ul>
-								<li>Amplified marketing efficiency by 15% for an e-commerce social media client by analyzing 100,000+ social media posts using
-SQL, SAP HANA, and Excel; delivered actionable KPIs and ad-hoc reports that influenced strategic decisions</li>
-								<li>Optimized SQL queries and resolved performance bottlenecks, reducing execution time by 40% and enhancing report refresh rates</li>
-								<li>Created dashboards and Crafted reports using SaaS tool Power BI, delivering insights to identify top content and marketing trends</li>
+								<li>Executed data and reporting tasks within Agile sprints using JIRA;analyze business processes, identifying gaps, and implementing automation to improve workflow efficiency by 25%</li>
+								<li>Analyzed 1M+ records with SQL to deliver KPIs and ad-hoc reports, boosting marketing efficiency by 25%</li>
+								<li>Optimized SQL queries and developed interactive Power BI dashboards to visualize real-time trends, resolve performance
+bottlenecks, and accelerate execution time by 40% across sales and marketing operations
+</li>
 								
 
 								
